<resources>
    <string name="app_name">ProjectOne</string>

    <string name="label_product_name">Product name :</string>
    <string name="label_product_barcode">Barcode :</string>
    <string name="label_product_price">Price/ea :</string>
    <string name="label_product_qty">Qty :</string>
    <string name="label_product_type">Type :</string>
    <string name="label_product_cost">Cost :</string>
    <string name="label_product_details">Details :</string>
    <string name="unit_bath">Baht</string>
    <string name="zero">0.00</string>
    <string name="add_product">add product</string>
    <string name="view_product">view product</string>
    <string name="label_product_total">Total :</string>
    <string name="label_product_method">Method :</string>
    <string-array name="spinner_method">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="btn_delete_item">Delete Item</string>
    <string name="label_product_discount">Discount :</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="btn_add">ADD</string>
    <string name="btn_last_scan">Last Scan</string>
    <string name="btn_back">BACK</string>
    <string name="btn_edit">EDIT</string>
    <string name="sign_in_sign_in_button">Sign in / Register</string>
    <string name="sign_in_error_invalid_email">Invalid email</string>
    <string name="sign_in_error_invalid_password">Password must 6–12 chars</string>
    <string name="sign_in_hint_email">E-mail</string>
    <string name="sign_in_hint_pass">Password 6–12 chars</string>
    <string name="register_store_store_name">Store name</string>
    <string name="register_store_store_pass">Store password</string>
    <string name="register_store_radio_owner">Owner</string>
    <string name="register_store_radio_emp">Employee</string>
    <string name="register_store_button_register_store">Register store</string>
    <string name="add_product_finish">ADD Product Finish</string>
    <string name="finished_sending_data">Finished sending data</string>
    <string name="can_not_connect_server">Can not connect server</string>
    <string name="error_sending_data">Error sending data</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="receipt_detail_subtotal_text">Sub Total</string>
    <string name="receipt_detail_discount_text">Discount</string>
    <string name="receipt_detail_total_text">Total</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main3">Main3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="prefs_summ_category_one">sum1</string>
    <string name="prefs_category_one">1</string>
    <string name="prefs_category_two">2</string>
    <string name="prefs_summ_category_two">sum2</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_payment_method">Payment method</string>
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!--setting for Payment Method-->
    <string name="pref_header_paypal">Paypal</string>
    <string name="pref_title_paypal_link">Your Paypal link</string>
    <string name="pref_default_paypal_link">your Paypal.me or Paypal button</string>
    <string name="pref_qrcode_status">QR code was set</string>
    <string name="pref_title_status">Enable</string>
    <string name="pref_title_qrcode_help">How to set QR code</string>

    <!--setting for Choose Bank-->
    <string name="pref_payment_ktb">KTB Net bank (Krung Thai Bank)</string>
    <string name="pref_payment_kplus">K Plus (Kasikorn bank)</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Title name on menu bar -->
    <string name="payment">Payment</string>
    <string name="items">Items</string>
    <string name="reports">Reports</string>
    <string name="receipts">Receipts</string>
    <string name="logout">Logout</string>
    <string name="shop">Shop</string>
    <string name="setting">Setting</string>
    <string name="contact_us">Contact us</string>
    <string name="title_activity_choose_bank_qrcode">Choose method</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="save">Save</string>
    <string name="Checkout">Checkout</string>
    <string name="add">Add</string>

    <!-- TODO: Toast Message -->
    <string name="no_items_added_">No items added</string>
    <string name="message_cancel_tansaction">Do you want to cancel this transaction?</string>

    <!--<string name="app_name">Effective Navigation</string>-->

    <string name="dummy_section_text">Section %1d is just a dummy section.</string>

    <string name="demo_external_activity">Demo External Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="alert_delete_item">Are you sure to delete this item ?</string>

</resources>
